@@ -1,8 +1,21 @@
 package com.project.yogerOrder.product.service;
 
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatusCode;
+import org.springframework.http.MediaType;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.client.RestClient;
+
 import com.project.yogerOrder.order.entity.OrderItem;
-import com.project.yogerOrder.product.cache.entity.ProductCacheEntity;
-import com.project.yogerOrder.product.cache.service.ProductCacheService;
+import com.project.yogerOrder.product.cache.domain.entity.ProductCacheEntity;
+import com.project.yogerOrder.product.cache.domain.service.ProductCacheService;
+import com.project.yogerOrder.product.cache.lock.service.ProductLockService;
 import com.project.yogerOrder.product.config.ProductConfig;
 import com.project.yogerOrder.product.dto.request.ReserveProductsRequestDTO;
 import com.project.yogerOrder.product.dto.request.UpsertProductRequestDTO;
@@ -14,19 +27,8 @@ import com.project.yogerOrder.product.exception.ProductServerStateException;
 import com.project.yogerOrder.product.exception.handler.ProductClientErrorHandler;
 import com.project.yogerOrder.product.exception.handler.ProductServerErrorHandler;
 import com.project.yogerOrder.product.repository.ProductRepository;
-import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatusCode;
-import org.springframework.http.MediaType;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.client.RestClient;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
@@ -38,13 +40,16 @@ public class ProductServiceImpl implements ProductService {
 
 	private final ProductCacheService productCacheService;
 	
+	private final ProductLockService productLockService;
+	
 	@Autowired
 	public ProductServiceImpl(ProductRepository productRepository,
 		ProductConfig config,
 		RestClient.Builder restClientBuilder, // 테스트하기 위해서 builder를 주입받아야 함
 		ProductClientErrorHandler productClientErrorHandler,
 		ProductServerErrorHandler productServerErrorHandler,
-	    ProductCacheService productCacheService) {
+	    ProductCacheService productCacheService,
+		ProductLockService productLockService) {
 		
 		this.productRepository = productRepository;
 		this.restClient = restClientBuilder
@@ -54,6 +59,7 @@ public class ProductServiceImpl implements ProductService {
 			.defaultStatusHandler(HttpStatusCode::is5xxServerError, productServerErrorHandler)
 			.build();
 		this.productCacheService = productCacheService;
+		this.productLockService = productLockService;
 	}
 	
 	
@@ -74,19 +80,50 @@ public class ProductServiceImpl implements ProductService {
 
 	@Override
 	public List<ProductResponseDTO> findByIds(List<Long> productIds) throws ProductNotFoundException {
+		// 최초 캐시 조회
 		List<ProductCacheEntity> productCaches = productCacheService.findAllByIds(productIds);
-		ArrayList<ProductResponseDTO> productResponseDTOs = new ArrayList<>(productCaches.stream().map(ProductResponseDTO::from).toList());
+		List<ProductResponseDTO> productResponseDTOs = productCaches.stream()
+			.map(ProductResponseDTO::from)
+			.collect(Collectors.toList()); // 수정가능하도록 반환
 
+		// 캐시에 없는 상품 키 필터링
 		List<Long> productKeysInDB = findKeysInDB(productIds, productCaches);
+		
+		// 캐시에 없는 상품이 있는 경우 잠금 획득 후 갱신 처리
 		if (!productKeysInDB.isEmpty()) {
-			List<ProductEntity> productEntities = productRepository.findAllById(productKeysInDB);
-			if (productEntities.size() != productKeysInDB.size()) {
-				throw new ProductNotFoundException();
-			}
-
-			productResponseDTOs.addAll(productEntities.stream().map(ProductResponseDTO::from).toList());
-
-			productCacheService.saveAll(productEntities);
+			List<ProductResponseDTO> refreshedProductResponseDTOs = productLockService.runWithDistributedLock(
+				productKeysInDB,
+				() -> {
+					// Lock 획득 후 다시 캐시 확인
+					List<ProductCacheEntity> refreshedProductCaches = productCacheService.findAllByIds(productKeysInDB);
+					List<Long> refreshedKeysInDB = findKeysInDB(productKeysInDB, refreshedProductCaches);
+					
+					List<ProductResponseDTO> productResponseDTOs2 = refreshedProductCaches.stream()
+						.map(ProductResponseDTO::from)
+						.collect(Collectors.toList());
+					
+					// 캐시에 모두 존재하지 않는 경우
+					if (!refreshedKeysInDB.isEmpty()) {
+						// DB 조회
+						List<ProductEntity> productEntities = productRepository.findAllById(refreshedKeysInDB);
+						if (productEntities.size() != refreshedKeysInDB.size()) {
+							throw new ProductNotFoundException();
+						}
+						
+						// 캐시 저장
+						productCacheService.saveAll(productEntities);
+						
+						productResponseDTOs2.addAll(productEntities.stream()
+							.map(ProductResponseDTO::from)
+							.toList()
+						);
+					}
+					
+					return productResponseDTOs2;
+				}
+			);
+			
+			productResponseDTOs.addAll(refreshedProductResponseDTOs);
 		}
 
 		return productResponseDTOs;
